Update to work with Java 11 runtime